@@ -1,0 +1,4 @@
+{# Use include instead of extends as there are no blocks that we can override #}
+{% include "wagtailsnippets/snippets/index_results.html" %}
+
+<p>An added paragraph</p>
